@@ -1,3 +1,4 @@
+ - Rename ElementRestriction --> RestrictedElement
  - Experimental import of x from tetrahedron
  - Make lhs/rhs work for resrictions
  - Redefine operator + for FiniteElements and replace + by *
